<resources>
    <string name="app_name">A2D2</string>
    <string name="home_screen">THIS A PRIVATE ORGANIZATION. IT IS NOT PART OF THE DEPARTMENT OF DEFENSE OR ANY OF ITS COMPONENTS AND IT HAS NO GOVERNMENTAL STATUS.</string>
    <string name="request_ride_button">Request Ride</string>
    <string name="a2d2_rules_title">A2D2 Program Rules</string>
    <string name="a2d2_rules_text">1. You are required to show your driver your military ID to be picked up. \n\n 2. The driver will only take you to your home address. \n\n 3. Groups will only be taken to single address. \n\n 4. Your pickup location must be within 25 miles of your duty station.</string>
    <string name="a2d2_rules_disclaimer">PRIVACY: A2D2 is an anonymous program. None of your provided information will be stored or given to leadership at anytime. \n\n DISCLAIMER: This is a private organization. It is not part of the Department of Defense or any of its components and it has no governmental status.</string>
    <string name="a2d2_rules_button">Agree</string>
    <string name="dialog_allow">ALLOW</string>
    <string name="dialog_deny">DENY</string>
    <string name="dialog_okay">OKAY</string>
    <string name="dialog_confirm">CONFIRM</string>
    <string name="dialog_title_LocationPermissionDenied">Location Permission Denied</string>
    <string name="location_dialog_text">Use Location?\n\nThis app wants to change</string>
    <string name="error_LocationPermissionDenied">You have not allowed the A2D2 app to access your GPS location. Without this permission, the app cannot function. Please go to your phone settings and enable the GPS permission.</string>
    <string name="error_dialog_title">Error</string>
    <string name="dialog_title_CallPermissionDenied">Call Permission Denied</string>
    <string name="error_CallPermissionDenied">You have not allowed the A2D2 app to access your phone\'s calling application</string>
    <string name="error_DefaultError">An error has occurred</string>
    <string name="tv_group_size">Group Size</string>
    <string name="tv_gender">Gender</string>
    <string name="button_request_driver">Request Driver</string>
    <string name="confirm_driver_request_title">Confirm Driver Request?</string>
    <string name="confirm_driver_request_body">Are you sure you want to dispatch a driver to your current location?</string>
    <string name="remarks_optional">Remarks (optional)</string>
    <string name="bacon_ipsum">Spicy jalapeno bacon ipsum dolor amet alcatra burgdoggen kevin sausage meatloaf, hamburger swine tongue filet mignon pastrami venison bresaola jerky. Meatball sirloin frankfurter, ham t-bone cow strip steak beef capicola ball tip. Picanha salami corned beef frankfurter, tri-tip fatback beef ribs. Short loin shank pork loin kevin, tail spare ribs ball tip picanha short ribs shoulder ground round brisket hamburger alcatra bacon. Meatball andouille fatback shoulder cow, tongue venison. Pork chop jowl biltong porchetta.</string>
    <string name="group_size">Group Size</string>
    <string name="gender">Gender</string>
    <string name="activity_request_ride_name">Name</string>
    <string name="a2d2_field_required">Required*</string>
    <string name="activity_request_ride_phone_number">Phone Number</string>

    <string name="error_phone_number">Invalid phone number</string>
    <string name="ride_status_message">Your request has been received by AADD dispatch. \nA driver will be dispatched and contact you shortly.</string>
    <string name="a2d2_number_label"><b>A2D2 Number:</b> 850-356-1450</string>
    <string name="call_a2d2_dispatch">Call A2D2 Dispatch</string>
    <string name="cancel_ride_request">Cancel Ride Request</string>
    <string name="cancel">CANCEL</string>

    <string name="test_user_name">Android Test User</string>
    <string name="test_phone_number">8435016944</string>

    <string name="driver_login_welcome_message"><b>Welcome!</b>\nPlease enter your email and password below</string>
    <string name="driver_login_email_hint">Email</string>
    <string name="driver_login_password_hint">Password</string>

    <string name="main_driver_login_button">Driver Sign In</string>
    <string name="become_a_driver"><u>Become a Driver</u></string>
    <string name="driver_login">Login</string>

    <string name="TEST_DRIVER_EMAIL">cooldriver@realandroidemail.com</string>
    <string name="TEST_DRIVER_PASSWORD">SecurePassword</string>

    <string name="request_ride_available">Available</string>
    <string name="request_ride_in_progress">In Progress</string>
    <string name="request_ride_completed">Completed</string>

    <string name="riderequestdetails_driver_takejob">Are you sure you want to pickup this rider?</string>
    <string name="riderequestdetails_driver_completejob">Confirm you dropped off the rider?</string>
    <string name="riderequestdetails_newdriver_takejob">This job has already been taken by another driver. Are you sure you want to pickup this rider anyway?</string>
    <string name="riderequestdetails_completejob">Complete Job</string>
    <string name="riderequestdetails_driver_messageToRider">This is your A2D2 driver. I\'m on my way!</string>
    <string name="home_page_logo_text_description">A2D2: Airmen Against Drunk Driving</string>

    <string name="connection_error">Please check your internet connection.</string>
    <string name="connection_error_title">Network Connection Error</string>
</resources>
