...

    <android.support.design.button.MaterialButton
        android:id="@+id/button_call_a2d2"
        style="@style/App.MaterialButton"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintBottom_toTopOf="@id/button_cancel_ride"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="6dp"
        android:text="@string/call_a2d2_dispatch"/>

    <android.support.design.button.MaterialButton
        android:id="@+id/button_cancel_ride"
...
