...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/app_theme_gradient"
    tools:context=".controllers.Rider_RequestRide">

    <!-- Rider name -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_request_ride_name_text_input_layout"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
...
        app:errorTextAppearance="@style/text_input_layout_error_appearance"
        android:hint="@string/activity_request_ride_name"
        android:textColorHint="@color/textColor"
        style="@style/activity_a2d2_text_input_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_ride_request_name_text_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="100"
            android:maxLines="1"
            android:inputType="text"
            android:scrollHorizontally="true"
...
            app:errorEnabled="true"/>
    </android.support.design.widget.TextInputLayout>


    <!-- Phone number -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_request_ride_phone_number_text_input_layout"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_request_ride_name_text_input_layout"
        app:errorTextAppearance="@style/text_input_layout_error_appearance"
        android:hint="@string/activity_request_ride_phone_number"
        android:textColorHint="@color/textColor"
        style="@style/activity_a2d2_text_input_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_ride_request_phone_number_text_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="phone"
            android:scrollHorizontally="true"
            android:textColor="@color/textColor"
...
        android:text="@string/gender"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/gender_spinner"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/gender_text_view"
...
        android:text="@string/group_size"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/group_size_spinner"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/group_size_text_view"
...
        android:layout_marginEnd="16dp"
        style="@style/activity_a2d2_text_input_layout"
        android:textColorHint="@color/textColor"
        android:hint="@string/remarks_optional">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/request_ride_remarks_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:inputType="textCapSentences|textMultiLine"
            android:scrollbars="vertical"
            android:gravity="start"
...
